[gd_scene load_steps=4 format=3 uid="uid://cwfn7kgqfs6b0"]

[ext_resource type="PackedScene" uid="uid://cjvnyrmfit4i7" path="res://Piege.tscn" id="2_8cy1r"]
[ext_resource type="Script" uid="uid://c7p22bquvolc0" path="res://button_jeu.gd" id="2_qibog"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24mha"]
size = Vector2(32, 31)

[node name="MiniJeuInfernal" type="Node2D"]

[node name="Button" type="Button" parent="."]
offset_left = 4.0
offset_top = 2.0
offset_right = 36.0
offset_bottom = 33.0
text = "jeu"
script = ExtResource("2_qibog")

[node name="Area2D" type="Area2D" parent="Button"]
position = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2(16, 15.5)
shape = SubResource("RectangleShape2D_24mha")

[node name="Piege" parent="." instance=ExtResource("2_8cy1r")]
position = Vector2(886, 76)

[node name="Piege2" parent="." instance=ExtResource("2_8cy1r")]
position = Vector2(96, 196)

[node name="Piege3" parent="." instance=ExtResource("2_8cy1r")]
position = Vector2(615, 428)

[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="area_entered" from="Button/Area2D" to="Button" method="_on_area_2d_area_entered"]
